fixing some weird bugs

--- a/documents/salmon-forecast-paper.Rmd
+++ b/documents/salmon-forecast-paper.Rmd
@@ -213,6 +213,35 @@ age_improv <- age_performance %>%
 
 ```
 
+<!-- Assemble the parts of the manuscript in this order: title page, abstract (or introduction) on a new page, key words, text, acknowledgments, literature cited, tables (one table per page), figure legends (on separate page preceding the first figure), figures (one figure per page; label each figure, i.e., Figure 1, Figure 2, etc.), and lastly any Appendices. Please note that if your manuscript is accepted, the appendices would only be published online. -->
+
+
+Frame the lag-1 model as null hypothesis, steve munch, averages variance around every estimate has a lower prediction. ONe sentence thing saying that colinearity 
+
+Make clearer that the lag 1 is to find which model works best individually, and then from there how do we make an ensemble. Statistical comparison of lag 1 vs practical performance 
+
+Now let's focus in on the ensemble 
+
+Add a recipe to the methods section for what's happening here
+
+Add in comparison to FRI
+
+Add in the usual caveats about overfitting our purpose is 
+
+. At the same time there is a risk of overfitting, especially with the more modern methods, that is not addressed. What tools are available to extract insights of the fit from the more advanced method? You write some on that later in the paper, but perhaps hint on that already here? 
+
+
+Data table? SI
+
+Make clearer that the FRI has had a mix of models over that time period and that makes the comparison 
+
+even then things fall on their face. the message isn't this is the best. make clearer that this isn't a horserace 
+
+we've seen change in age structure, and point out that some of these models having done better at this. 
+
+take a crack at the climate thing 
+
+
 <!-- Modern computational tools such as dynamic linear modeling, machine learning and empirical dynamical modeling have fundamentally transformed many aspects of our society by providing previously impossible levels of predictive accuracy to tasks from digital advertising to weather forecasting. However, these methods are underutilized for predicting and managing natural resources and ecological systems. Forecasts of fish populations are an integral part of many management systems, and are often used by the fishing and processing sectors to make business plans. Almost all fish forecasts are currently based on population dynamics using estimates of birth rates and survival from recent years. Salmon are an ecological, cultural, and economic keystone of Alaska, and forecasts of salmon runs are used by fish processors to inform staffing and supply decisions, and even to determine whether to operate for the fishing fleets. These forecast are also used by harvesters to inform spatial effort allocation decisions and determine crew size. Although valuable, these predictions are challenging given the complex set of dynamic factors that affect numbers of returning salmon, from egg production to predation to the environmental drivers of salmon survival in marine and freshwater habitats. We utilize data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to attempt to identify the frontiers in forecast accuracy possible given currently available data. By leveraging environmental data and correlations between distinct salmon populations, combinations of modern computational tools were able to reduce out-of-sample error by on average 12% for age-specific forecasts, and 19% for river-specific forecasts. Yet, there were some observations that were not accurately predicted by any method. Given the flexible nature and varying assumptions of our evaluated models, these isolated collective forecast failures help identify when forecast performance is limited by model specification versus the constraints imposed by the nature and quality of available data. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.  -->
 
 \newpage
@@ -247,11 +276,11 @@ Machine learning, predictive modeling, salmon, ecological forecasting, value of 
 
 ## Abstract {.unnumbered}
 
-Modern computational tools such as machine learning have transformed predictive fields from advertising to weather forecasting. However, these methods are underutilized for managing ecological systems. Salmon are a natural, cultural, and economic keystone of Alaska, and accurate pre-season forecasts of the numbers of sockeye salmon (*Oncorhynchus nerka*), that will return to the river systems of Bristol Bay play an important role in management and harvesting decisions. These predictions are challenging though, given the complex set of dynamic factors that affect salmon. We use data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to identify the frontiers in forecast accuracy possible given currently available data. By leveraging dynamic environmental information and correlations between salmon populations, we were able to reduce forecast error by on average `r percent(comp_sys_improvement$imp_on_fri)`. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.
+Modern computational tools such as machine learning have transformed predictive fields from advertising to weather forecasting. However, these methods are not yet heavily utilized for managing ecological systems. Salmon are a natural, cultural, and economic keystone of Alaska, and accurate pre-season forecasts of the numbers of sockeye salmon (*Oncorhynchus nerka*), that will return to the river systems of Bristol Bay play an important role in management and harvesting decisions. These predictions are challenging though, given the complex set of dynamic factors that affect salmon. We use data from the salmon populations of Bristol Bay, Alaska, together with a suite of modern forecasting tools, to identify the frontiers in forecast accuracy possible given currently available data. By leveraging dynamic environmental information and correlations between salmon populations, we were able to reduce forecast error by on average `r percent(comp_sys_improvement$imp_on_fri)` relative to a simple mull model, and by XX relative to a benchmark model used in the system. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.
 
-## Significance Statement {.unnumbered}
+<!-- ## Significance Statement {.unnumbered} -->
 
-The sockeye salmon (*Oncorhynchus nerka*) populations of Bristol Bay, Alaska are economic and ecological marvels, playing key roles in the ecosystems of Alaska and supporting the largest commercial salmon fishery in the world. Pre-season forecasts of the annual returns of these fish are important to both managers and fishing fleets. Computational tools such as machine learning have transformed predictive fields from advertising to weather forecasting. However, these methods are underutilized for managing ecological systems. Using modern computational tools we were able to substantially increase the accuracy of pre-season forecasts for the Bristol Bay sockeye salmon fishery. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems.
+<!-- The sockeye salmon (*Oncorhynchus nerka*) populations of Bristol Bay, Alaska are economic and ecological marvels, playing key roles in the ecosystems of Alaska and supporting the largest commercial salmon fishery in the world. Pre-season forecasts of the annual returns of these fish are important to both managers and fishing fleets. Computational tools such as machine learning have transformed predictive fields from advertising to weather forecasting. However, these methods are underutilized for managing ecological systems. Using modern computational tools we were able to substantially increase the accuracy of pre-season forecasts for the Bristol Bay sockeye salmon fishery. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems. -->
 
 # Introduction
 
@@ -276,6 +305,65 @@ Why might we expect modern computational tools to be well-suited to the task of 
 Rather than incorporate these factors directly, salmon forecasting has traditionally relied on cohort or "sibling" regression methods, in which the return abundance of an older age class is predicted by the abundance of younger age classes returning in prior years but originating from the same river system and brood year. For example, the return abundance of four-year old fish are predicted by the returns of three-year old fish observed in the previous season. There are good reasons for this practice: trends in sibling abundance internalize many factors affecting salmon returns. If a particular cohort suffers from poor environmental conditions and large amount of competition with other predators, the impacts of that will be reflected in the return abundance of younger age classes from the same cohort (i.e. originating from the same brood year) that experienced similar environmental conditions and resource availability, and by extension survival, as juveniles. However, this sibling regression method does have shortcomings, most notably the underlying assumption of consistency in the relationship between the abundance of age classes and stability in the maturation schedule (i.e. the probability of salmon maturing and returning to freshwater to spawn after a given number of years in the ocean). For example, if environmental conditions cause members of a cohort of salmon to spend more time at sea than in previous years, a sibling regression might under predict the number of future returns. In addition, sibling regression requires accurate observations of the return abundance for younger sibling age classes, limiting the performance of these models in predicting returns of younger salmon for which few or no siblings (i.e. returning younger age classes) have yet been observed.
 
 We hypothesize that directly incorporating data on candidate potentially time-varying factors influencing and correlated with salmon return size, rather than relying on sibling returns alone, may help improve forecasting given the intricate dynamics of salmon populations. However, these variables are likely to have complex, non-linear, and non-stationary effects on salmon populations, potentially obscuring their value from conventional parametric statistical approaches, with user-defined parameters, structures, and error distributions. In order to explore this possibility, we use a suite of six methods together with a panel of data on salmon populations and environmental conditions in Bristol Bay, Alaska to explore what if any improvements in forecast skill can be achieved. These models include two machine learning methods (a random forest, rand\_forest, [@breiman2001; @wright2017] and a boosted regression tree, boost\_tee, [@chen2020]), empirical dynamic models [edm, @munch2020 and references therein], and dynamic linear models [dlm, @petris2009; @pole1994]. We also include a lag-1 model, lag\_1, as a performance benchmark, in which the predicted returns for a given age group and river system in a year are equal to the observed returns for that that age group in that river system in the prior year. Our goal here is not to establish whether one type of model performs inherently better than others, but to evaluate how use of different computer age modeling assumptions and data types can collectively improve forecast ability and identify frontiers in forecast ability given available data. While our tested methods made meaningful improvements in forecast accuracy in many cases, no one model type stood out as a clear winner, highlighting the need for multi-model inference in ecological forecasting.
+
+
+# Methods
+
+All code and data needed to fully replicate our results are publicly available at <https://github.com/DanOvando/salmon-forecast-paper/>. We describe critical details of each our main methods here. 
+
+The general structure of our methods is as follows: 
+
+1. Individual models for each river system and age group were fit to historical data 
+
+2. Performance of individual models was assessed by comparing against a benchmark "lag-1" prediction model in which the forecast for next year is simply the observer returns in the previous year
+
+3. Individual models were aggregated into a statistical ensemble model based on their historic performance metrics
+
+4. The statistical ensemble model was then compared to the XX Curry can you think if a better way to phrase this?XX more qualitatively constructed ensemble model
+
+
+All models were compared based upon one-step-ahead forecast skill, defined here by SRMSE. Each of the evaluated models generate forecasts at the resolution of age group and river system in a given year. Forecasts for a given year are produced by a model trained on all years after 1963 and prior to the year for which a forecast is desired. This is performed in a rolling fashion, such that for example forecasts for the year 2018 are produced by a model trained on data from 1963 to 2017, the 2019 forecast by a model trained on data from 1963 to 2018, and so on. Each method has its own ways of tuning and validating the model, but all such steps are performed using only the training data: all data for the forecast year are held out until the final prediction.
+
+Predictive performance of candidate models was calculated by generating 1-year ahead forecasts for each target river system by age class combination, as a rolling window from the year 2000 to 2019. This method for quantifying forecast performance is most applicable to the context of this ecological forecasting problem as each candidate model is trained on data up to, but not including, the prediction year. In this way, retrospective forecast performance is evaluated using the data that would have been available to the analyst in each year historically. Even though each model predicts at the resolution of age group and river system, we generally compare model performance at coarser resolutions (for example river system across all age groups). In those cases, we first aggregate the total returns at the resolution in question (e.g. sum all observed and forecast returns across all age groups for a given river system), and then calculate SRMSE based on those aggregated data.
+
+We do not conduct formal statistical tests of model fit or performance. Conventional statistical models might be assessed in terms of statistical significance, and compared via some form of information criterion. However, neither the machine learning or the empirical dynamic modeling methods have formal estimates of uncertainty or likelihoods, and as such do not produce measures of statistical significance, and cannot be compared information criteria such as AIC scores. Accordingly, we judge model performance by the point estimates of SRMSE produced by each model across the retrospective horizon 1990-2019. Performance relative to a ... 
+
+## Machine Learning Models
+
+We evaluated two different machine learning models: a random forest (rand\_forest, implemented through the `ranger` package [@wright2017] in R [@rcoreteam2020]), and boosted regression trees, boost\_tree, through the `xgboost` package [@chen2020]. A recurrent neural network implemented through `tensorflow` [allaire2020] through the `keras` interface [allaire2020a] was also tested but was found to perform poorly relative to the other methods and to be extremely computationally intensive, and as such was not included in the main analysis. Random forests are ensembles of regression trees, which make predictions by selecting nested splits of variables and mapping the mean level of the dependent variable at the terminal nodes of each tree. Boosted regression trees are similar to random forests, but have mechanisms in place that actively update the model to address data points that the model is struggling to fit [@elith2008]. For all machine learning methods, within a model fit the model selects splits/transformations/coefficients in order to minimize some objective function on held-out data (e.g. minimize the RMSE of predictions on data held out from the fitting process by the algorithm).
+
+Each of the machine learning methods had access to a variety of population and environmental data. We fit versions of each model separately for each age group in each major river system. Within that river system, the candidate predictor variables included the sibling returns for the cohort in question in all river systems, the numbers of the cohort that spawned the cohort in question, along with the cumulative mean environmental conditions (sea surface temperature, pacific decadal oscillation, sea surface air pressure, and degree of upwelling) over the years the cohort spent at sea, and the reported numbers of chum and pink salmon throughout the North Pacific reported by Ruggerone et al. [@ruggerone2018].
+
+Models were fit at the level of age groups by river system. Data were first split into training and testing sets. We then split each of the training sets (e.g. all data before the year 2000 if the year 2001 is to be forecasted) into a series of analysis and assessment splits. Given the timeseries nature of the data, we generated these analysis and assessment splits in a rolling manner: for the first split, we used the first 70% of the training year to fit a model, and the remaining 30% to evaluate the performance of that model, followed by the first 75% and 25%, etc. These analysis and assessment splits were used to tune nuisance parameters common to all machine learning models, for example the minimum node size of fitted trees. We fit each of our assessment splits across a grid of potential parameter values, and selected the set of tuning parameters that minimized the root-mean squared error (RMSE) of the predictions on the assessment splits (see computational environment available at <https://github.com/DanOvando/salmon-forecast-paper/> for detailed steps in this process).
+
+Once the set of tuning parameters for each training set were selected, we then fit the final model using all the training data with those tuned parameters, and then used that model to predict the returns in the testing set. All relevant data transformations were prepared only on training / analysis splits (e.g. means and standard deviations for centering and scaling) and then applied to testing / assessment splits.
+
+## Dynamic Linear Models
+
+Traditional methods for forecasting sockeye salmon abundance in Bristol Bay and throughout Alaska, have relied on the relationship between the abundance of different age classes from the same cohort, or originating from the same brood year, but returning to breed in subsequent years. These "sibling" or cohort regression models leverage the fact that salmon spawned in the same brood year and migrating to sea in the same year exhibit similar patterns in survival, based upon their shared exposure to the same physical environmental conditions, prey resource availability, and predator field, as juveniles and at ocean entry.
+
+Foundational to the predictability of sibling relationships is the assumption that the ratio of returns by age class remains stable across time. In a context of a linear model, for example, we can model returns as $\hat{R^{1.3}_t} = \alpha + \beta{R^{1.2}_{t-1}}$ where $\hat{R^{1.3}_t}$ is the predicted return abundance of the older age class and $R^{1.2}_{t-1}$ is the observed abundance of the same cohort returning in the prior year after one few years in the ocean (i.e. 1.2). Under a classic sibling regression the assumption is that the estimated parameters $\alpha$ and $\beta$ remain constant across time. However, there are multiple conditions under which both the average return abundance of a particular age class or the ratio of abundances among age classes might change over time. For example, if the average maturation schedule (i.e. the probability that an individual will mature after 2 vs. 3 years in the ocean) changes in response to natural or anthropogenic selection, the assumption of a stationary parameter is violated. Alternatively, if average marine mortality experienced by salmon changes as a result of large-scale climate, ecosystem, or trophic shifts, this should be reflected by changes in both parameters of the regression model.
+
+To better represent the dynamic nature of sibling or cohort relationships over time and improve predictive performance, we implement dynamic linear models (hereafter DLMs). DLMs are a class of regression models where the values of regression coefficients are permitted to evolve over time, rather than remain static [@petris2009; @pole1994]. DLMs were fit to available data using a single predictor age class (one fewer year in the ocean, returning the prior year), and allowing for evolution of both the slope and intercept parameters over time, as:
+
+$$\hat{R^{1.3}_t} = \alpha_t + \beta_t{R^{1.2}_{t-1}} + \epsilon_t$$
+
+Both regression parameters are described by a random walk (i.e. $\alpha_t \sim Normal(\alpha_{t-1},\sigma^2_{\alpha})$ and $\beta_t \sim Normal(\beta_{t-1},\sigma^2_{\beta})$), and errors were assumed normally-distributed ($\epsilon_t \sim Normal(0,\sigma^2_{\epsilon})$). DLMs were implemented using the Multivariate Autoregressive State-Space Modelling (MARSS) package (version 3.10.12) in R [@holmes2012; @holmes2020].
+
+## Empirical Dynamic Modeling
+
+Empirical dynamic modeling (EDM) is a nonparametric approach to characterize ecological dynamics and generate forecasts. The approach is predicated on Takens' theorem, which states that a single time series and a number of lags (dimension; E) are representative of overall system dynamics [@sugihara1990; @takens1981]. Applications of EDM have identified causal relationships in ecological systems [@sugihara2012] and improved forecast skill in Fraser River sockeye salmon [@ye2015]. See [@munch2020] and [@chang2017] for more general overviews of EDM. We used the software package rEDM [@ye2020] for analysis.
+
+Here, we applied simplex projection (hereafter simplex) and sequentially locally weighted global linear maps (s-map) to the Bristol Bay sockeye data. Both methods require identifying the dimensionality (E) of a time series and constructing an attractor (a time series and its E-lagged coordinates). Leave-one-out prediction identifies the best E of a time series. We used E values ranging from 1 to 10, found the E-nearest neighbors (based on Euclidean distance) from the observation of interest, and calculated a predicted value by averaging the E-nearest neighbors. The best E had the highest correlation between observed and predicted values. S-maps is an extension of simplex that has the addition of a weighting parameter (theta) which modifies the strength of nearest neighbor weighting (theta=0 weights nearest neighbors equally; theta\>0 stronger weighting of nearest neighbors) [@sugihara1994].
+
+We used s-maps for each of the river, age-class combinations. For example, we predicted Kvichak 1.2 returns. We identified the best E for Kvichak 1.2 and also included information from the the top 6 age classes (based on average returns) for Kvichak. The attractors had a time series and its lagged coordinates and the unlagged coordinates for abundant age classes. The s-map theta values were selected based on the conditioning data set (e.g. time series up to 2000) to predict one year into the future (2001).
+
+## Ensemble Models
+
+Each individual model... The purpose of ensemble models... 
+
+The FRI ensemble forecast values were pulled from the historic pre-season forecasts as published. For the boosted regression tree ensemble, we follow a similar routine to that employed for the individual boosted regression tree model. We compiled the pre-season forecasts by river system and age group for each of the candidate models going back to 1991. The ensemble sought to predict the observed total returns by river system using the returns by river system and age class produced by each of the candidate models. For the years 2000 to 2019, we performed a series rolling model fits, where data before the testing year was held out for training (and analysis and assessment splitting and model tuning), and then used fit the ensemble model, which was then tested on the testing year. The held-out one-year-ahead predictions of the ensemble model in each time step were then compiled to create the historic series of ensemble forecasts at the river system level.
+
 
 # Results
 
@@ -386,48 +474,6 @@ The field of ecology is generally concerned with developing theories and evidenc
 <!-- Given the flexible nature and varying assumptions of our evaluated models, these isolated collective forecast failures help identify when forecast performance is limited by model specification versus the constraints imposed by the nature and quality of available data. Our results demonstrate the utility and limitations of modern computational tools for applied management of natural resources, even when confronted with the short time series and observation error common in ecological systems. -->
 
 Accurate forecasts are a crucial part of natural resource management, a task made increasingly challenging by climate change. Our gains in forecast accuracy for the economically and ecologically critical Bristol Bay sockeye salmon fishery demonstrate the ability of modern computational tools to make meaningful improvements in predictive ability for the abundance of natural populations faced with a rapidly changing environment. By combining multiple modern computational tools we are able to identify likely frontiers in forecast performance given currently available data. However, even for this relatively robust dataset we were fundamentally unable to predict the returns of particular river systems and age classes in certain years. The collective failure of multiple methods in specific time steps and locations helps clarify instances in which the only likely path to meaningful forecast improvement is collection of additional data, while also highlighting the potentially irreducible impact of observation error on the limits of forecast performance. It is critical that we allocate resources to both the advancement of predictive modeling methods in ecology, and to the hard work of collecting the data from the natural world that are the foundation of any successful forecasting efforts.
-
-# Materials and Methods
-
-All code and data needed to fully replicate our results are publicly available at <https://github.com/DanOvando/salmon-forecast-paper/>. We describe critical details of each our main methods here. All models were compared based upon one-step-ahead forecast skill, defined here by SRMSE. Each of the evaluated models generate forecasts at the resolution of age group and river system in a given year. Forecasts for a given year are produced by a model trained on all years after 1963 and prior to the year for which a forecast is desired. This is performed in a rolling fashion, such that for example forecasts for the year 2018 are produced by a model trained on data from 1963 to 2017, the 2019 forecast by a model trained on data from 1963 to 2018, and so on. Each method has its own ways of tuning and validating the model, but all such steps are performed using only the training data: all data for the forecast year are held out until the final prediction.
-
-Predictive performance of candidate models was calculated by generating 1-year ahead forecasts for each target river system by age class combination, as a rolling window from the year 2000 to 2019. This method for quantifying forecast performance is most applicable to the context of this ecological forecasting problem as each candidate model is trained on data up to, but not including, the prediction year. In this way, retrospective forecast performance is evaluated using the data that would have been available to the analyst in each year historically. Even though each model predicts at the resolution of age group and river system, we generally compare model performance at coarser resolutions (for example river system across all age groups). In those cases, we first aggregate the total returns at the resolution in question (e.g. sum all observed and forecast returns across all age groups for a given river system), and then calculate SRMSE based on those aggregated data.
-
-We do not conduct formal statistical tests of model performance. Conventional statistical models might be compared via some form of information criterion. However, neither the machine learning or the empirical dynamic modeling methods have formal estimates of uncertainty or likelihoods, and as such cannot be compared by such methods. Accordingly, we judge model performance by the point estimates of SRMSE produced by each model across the retrospective horizon 1990-2019.
-
-## Machine Learning Models
-
-We evaluated two different machine learning models: a random forest (rand\_forest, implemented through the `ranger` package [@wright2017] in R [@rcoreteam2020]), and boosted regression trees, boost\_tree, through the `xgboost` package [@chen2020]. A recurrent neural network implemented through `tensorflow` [allaire2020] through the `keras` interface [allaire2020a] was also tested but was found to perform poorly relative to the other methods and to be extremely computationally intensive, and as such was not included in the main analysis. Random forests are ensembles of regression trees, which make predictions by selecting nested splits of variables and mapping the mean level of the dependent variable at the terminal nodes of each tree. Boosted regression trees are similar to random forests, but have mechanisms in place that actively update the model to address data points that the model is struggling to fit [@elith2008]. For all machine learning methods, within a model fit the model selects splits/transformations/coefficients in order to minimize some objective function on held-out data (e.g. minimize the RMSE of predictions on data held out from the fitting process by the algorithm).
-
-Each of the machine learning methods had access to a variety of population and environmental data. We fit versions of each model separately for each age group in each major river system. Within that river system, the candidate predictor variables included the sibling returns for the cohort in question in all river systems, the numbers of the cohort that spawned the cohort in question, along with the cumulative mean environmental conditions (sea surface temperature, pacific decadal oscillation, sea surface air pressure, and degree of upwelling) over the years the cohort spent at sea, and the reported numbers of chum and pink salmon throughout the North Pacific reported by Ruggerone et al. [@ruggerone2018].
-
-Models were fit at the level of age groups by river system. Data were first split into training and testing sets. We then split each of the training sets (e.g. all data before the year 2000 if the year 2001 is to be forecasted) into a series of analysis and assessment splits. Given the timeseries nature of the data, we generated these analysis and assessment splits in a rolling manner: for the first split, we used the first 70% of the training year to fit a model, and the remaining 30% to evaluate the performance of that model, followed by the first 75% and 25%, etc. These analysis and assessment splits were used to tune nuisance parameters common to all machine learning models, for example the minimum node size of fitted trees. We fit each of our assessment splits across a grid of potential parameter values, and selected the set of tuning parameters that minimized the root-mean squared error (RMSE) of the predictions on the assessment splits (see computational environment available at <https://github.com/DanOvando/salmon-forecast-paper/> for detailed steps in this process).
-
-Once the set of tuning parameters for each training set were selected, we then fit the final model using all the training data with those tuned parameters, and then used that model to predict the returns in the testing set. All relevant data transformations were prepared only on training / analysis splits (e.g. means and standard deviations for centering and scaling) and then applied to testing / assessment splits.
-
-## Dynamic Linear Models
-
-Traditional methods for forecasting sockeye salmon abundance in Bristol Bay and throughout Alaska, have relied on the relationship between the abundance of different age classes from the same cohort, or originating from the same brood year, but returning to breed in subsequent years. These "sibling" or cohort regression models leverage the fact that salmon spawned in the same brood year and migrating to sea in the same year exhibit similar patterns in survival, based upon their shared exposure to the same physical environmental conditions, prey resource availability, and predator field, as juveniles and at ocean entry.
-
-Foundational to the predictability of sibling relationships is the assumption that the ratio of returns by age class remains stable across time. In a context of a linear model, for example, we can model returns as $\hat{R^{1.3}_t} = \alpha + \beta{R^{1.2}_{t-1}}$ where $\hat{R^{1.3}_t}$ is the predicted return abundance of the older age class and $R^{1.2}_{t-1}$ is the observed abundance of the same cohort returning in the prior year after one few years in the ocean (i.e. 1.2). Under a classic sibling regression the assumption is that the estimated parameters $\alpha$ and $\beta$ remain constant across time. However, there are multiple conditions under which both the average return abundance of a particular age class or the ratio of abundances among age classes might change over time. For example, if the average maturation schedule (i.e. the probability that an individual will mature after 2 vs. 3 years in the ocean) changes in response to natural or anthropogenic selection, the assumption of a stationary parameter is violated. Alternatively, if average marine mortality experienced by salmon changes as a result of large-scale climate, ecosystem, or trophic shifts, this should be reflected by changes in both parameters of the regression model.
-
-To better represent the dynamic nature of sibling or cohort relationships over time and improve predictive performance, we implement dynamic linear models (hereafter DLMs). DLMs are a class of regression models where the values of regression coefficients are permitted to evolve over time, rather than remain static [@petris2009; @pole1994]. DLMs were fit to available data using a single predictor age class (one fewer year in the ocean, returning the prior year), and allowing for evolution of both the slope and intercept parameters over time, as:
-
-$$\hat{R^{1.3}_t} = \alpha_t + \beta_t{R^{1.2}_{t-1}} + \epsilon_t$$
-
-Both regression parameters are described by a random walk (i.e. $\alpha_t \sim Normal(\alpha_{t-1},\sigma^2_{\alpha})$ and $\beta_t \sim Normal(\beta_{t-1},\sigma^2_{\beta})$), and errors were assumed normally-distributed ($\epsilon_t \sim Normal(0,\sigma^2_{\epsilon})$). DLMs were implemented using the Multivariate Autoregressive State-Space Modelling (MARSS) package (version 3.10.12) in R [@holmes2012; @holmes2020].
-
-## Empirical Dynamic Modeling
-
-Empirical dynamic modeling (EDM) is a nonparametric approach to characterize ecological dynamics and generate forecasts. The approach is predicated on Takens' theorem, which states that a single time series and a number of lags (dimension; E) are representative of overall system dynamics [@sugihara1990; @takens1981]. Applications of EDM have identified causal relationships in ecological systems [@sugihara2012] and improved forecast skill in Fraser River sockeye salmon [@ye2015]. See [@munch2020] and [@chang2017] for more general overviews of EDM. We used the software package rEDM [@ye2020] for analysis.
-
-Here, we applied simplex projection (hereafter simplex) and sequentially locally weighted global linear maps (s-map) to the Bristol Bay sockeye data. Both methods require identifying the dimensionality (E) of a time series and constructing an attractor (a time series and its E-lagged coordinates). Leave-one-out prediction identifies the best E of a time series. We used E values ranging from 1 to 10, found the E-nearest neighbors (based on Euclidean distance) from the observation of interest, and calculated a predicted value by averaging the E-nearest neighbors. The best E had the highest correlation between observed and predicted values. S-maps is an extension of simplex that has the addition of a weighting parameter (theta) which modifies the strength of nearest neighbor weighting (theta=0 weights nearest neighbors equally; theta\>0 stronger weighting of nearest neighbors) [@sugihara1994].
-
-We used s-maps for each of the river, age-class combinations. For example, we predicted Kvichak 1.2 returns. We identified the best E for Kvichak 1.2 and also included information from the the top 6 age classes (based on average returns) for Kvichak. The attractors had a time series and its lagged coordinates and the unlagged coordinates for abundant age classes. The s-map theta values were selected based on the conditioning data set (e.g. time series up to 2000) to predict one year into the future (2001).
-
-## Ensemble Models
-
-The FRI ensemble forecast values were pulled from the historic pre-season forecasts as published. For the boosted regression tree ensemble, we follow a similar routine to that employed for the individual boosted regression tree model. We compiled the pre-season forecasts by river system and age group for each of the candidate models going back to 1991. The ensemble sought to predict the observed total returns by river system using the returns by river system and age class produced by each of the candidate models. For the years 2000 to 2019, we performed a series rolling model fits, where data before the testing year was held out for training (and analysis and assessment splitting and model tuning), and then used fit the ensemble model, which was then tested on the testing year. The held-out one-year-ahead predictions of the ensemble model in each time step were then compiled to create the historic series of ensemble forecasts at the river system level.
 
 # Funding
 
